package com.upnext.notabox.common

object TestTags {

    const val NOTES_SCREEN_TEST_TAG = "notes"
    const val ToDos_SCREEN_TEST_TAG = "todos"
    const val PRIORITIES_SCREEN_TEST_TAG = "priorities"
    const val FOLDERS_SCREEN_TEST_TAG = "folders"
    const val SETTINGS_SCREEN_TEST_TAG = "settings"
    const val CREATE_NOTE_SCREEN_TEST_TAG = "create_note"
    const val NAV_DRAWER_TEST_TAG = "nav_drawer"
    const val PRIORITIES_TOOL_BAR_TEST_TAG = "tool-bar-priorities"
    const val FOLDER_TOOL_BAR_TEST_TAG = "tool-bar-folder"
    const val SETTINGS_TOOL_BAR_TEST_TAG = "tool-bar-settings"
    const val CREATE_NOTE_TOOL_BAR_TEST_TAG = "create-note-tool-bar-settings"
    const val FILTER_SECTION_TEST_TAG = "filter-section"
    const val FILTER_ICON_TEST_TAG = "filter-icon-section"
    const val SEARCH_TEXT_FIELD_TEST_TAG = "search-text-field"
    const val SEARCH_TEXT_HINT_TEST_TAG = "search-hint-text"

}